replace singleLinked list by LastCommandHolder